test/syntax/05-type_specifier-3-err.c
// ======================================================================

/* type_specifier -> type MULTIPLY */

// ======================================================================

*ip;    // error: no type

void main(void)
{
  char *cp;

}

// ======================================================================
